# aquascope

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  mkdocs.yml  paper.bib  paper.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_data_source.md  new_methodology.md
.github/workflows/: ci.yml  docs.yml  draft-pdf.yml
.streamlit/: config.toml
aquascope/: __init__.py  __main__.py  api.py  cli.py
aquascope/agri/: __init__.py  benchmark.py  crop_water.py  eto.py  planner.py  productivity.py  water_balance.py
aquascope/ai_engine/: __init__.py  agent.py  knowledge_base.py  model_recommender.py  planner.py  recommender.py
aquascope/alerts/: __init__.py  checker.py  notifier.py  thresholds.py
aquascope/analysis/: __init__.py  changepoint.py  copulas.py  eda.py  extreme_events.py  metrics.py  quality.py  water_quality_index.py
aquascope/challenges/: __init__.py  drought.py  flood.py  quality.py
aquascope/climate/: __init__.py  cmip6.py  downscaling.py  indices.py  scenarios.py
aquascope/collectors/: __init__.py  aquastat.py  base.py  camels_cl.py  copernicus.py  eu_wfd.py  france_hubeau.py  gemstat.py  grdc.py  india_wris.py  ireland_opw.py  japan_mlit.py  korea_wamis.py  openmeteo.py  pegelonline.py  sdg6.py  taiwan_civil_iot.py  taiwan_datagov.py  taiwan_moenv.py  taiwan_wra.py  taiwan_wra_fhy.py  taiwan_wra_iot.py  uk_ea.py  usgs.py  wapor.py  wqp.py
aquascope/dashboard/: __init__.py  _charts.py  _demo.py  _insights.py  _state.py  app.py
aquascope/groundwater/: __init__.py  aquifer.py  drought.py  grace.py  recharge.py  wells.py
aquascope/hydrology/: __init__.py  baseflow.py  flood_frequency.py  flow_duration.py  rating_curve.py  recession.py  signatures.py  streamflow.py
aquascope/io/: __init__.py  hec.py  interop.py  swmm.py  waterml.py
aquascope/models/: __init__.py  analysis.py  base.py  bayesian.py  ensemble.py  lstm.py  ml.py  rainfall_runoff.py  statistical.py  transfer.py
aquascope/pipelines/: __init__.py  model_builder.py
aquascope/reporting/: __init__.py  builder.py  templates.py
aquascope/schemas/: agriculture.py  climate.py  groundwater.py  water_data.py
aquascope/spatial/: __init__.py  catchment_stats.py  dem.py  flow.py  watershed.py
aquascope/utils/: collect_many.py  http_client.py  imports.py  storage.py
aquascope/viz/: __init__.py  diagnostics.py  hydro.py  quality.py  spatial.py  styles.py  timeseries.py
data/camels_benchmark/: 01013500.csv  01664000.csv  02231000.csv  03451500.csv  06803500.csv  07056000.csv  08181500.csv  09510200.csv  11532500.csv  14301000.csv  README.md  catchments.json  generate_synthetic.py
deploy/hf-static-demo/: README.md  deploy.sh  index.html
deploy/huggingface-space/: Dockerfile  README.md  app.py  deploy.sh  requirements.txt
docs/: api.md  data_sources.md  faq.md  features.md  getting_started.md  index.md  methodology_matrix.md  theory.md  troubleshooting.md  use_cases.md
docs/guides/: adding_data_source.md  adding_methodology.md  architecture.md  fao_agriculture_plan.md  running_pipelines.md
docs/integration_guides/: qgis_integration.md  r_integration.md  xarray_integration.md
examples/: 01_collect_single_source.py  02_quality_analysis.py  03_methodology_recommendations.py  04_hydrology_analysis.py  05_flood_forecasting.py  06_natural_language_agent.py  07_visualization_gallery.py  08_fao_irrigation_planning.py  09_aquastat_benchmark.py  10_wapor_productivity.py  quickstart.py
examples/validation/: README.md  validate_camels.py  validation_results.csv
notebooks/: 01_quickstart_tutorial.ipynb  02_beginner_tutorial.ipynb  03_hydrology_deep_dive.ipynb  04_flood_forecasting.ipynb  05_methodology_decision_guide.ipynb  06_multi_source_integration.ipynb
tests/: test_docs_counts.py
tests/test_agri/: test_agri.py  test_benchmark.py  test_planner.py  test_productivity.py
tests/test_ai_engine/: test_agent_planner.py  test_knowledge_base.py  test_recommender.py
tests/test_alerts/: test_alerts.py
tests/test_analysis/: test_changepoint.py  test_copulas.py  test_eda.py  test_extreme_events.py  test_metrics.py  test_quality.py  test_water_quality_index.py
tests/test_api/: test_convenience.py  test_package_api.py
tests/test_challenges/: test_challenges.py
tests/test_cli/: test_source_registry.py
tests/test_climate/: test_cmip6.py  test_downscaling.py  test_indices.py  test_scenarios.py  test_spi.py
tests/test_collectors/: test_camels_cl.py  test_collect_many.py  test_eu_wfd.py  test_grdc.py  (+10 more)
(+41 files in other folders)
