[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aquascope"
version = "0.1.0"
description = "Open-source water data aggregation toolkit with AI-powered research methodology recommendations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AquaScope Contributors"},
]
keywords = [
    "water-quality",
    "hydrology",
    "open-data",
    "taiwan",
    "USGS",
    "SDG6",
    "AI",
    "research-methodology",
    "environmental-science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ml = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
]
llm = [
    "openai>=1.0",
]
all = [
    "aquascope[ml,llm]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

[project.scripts]
aquascope = "aquascope.cli:main"

[project.urls]
Homepage = "https://github.com/Rekin226/aquascope"
Documentation = "https://github.com/Rekin226/aquascope#readme"
Repository = "https://github.com/Rekin226/aquascope"
Issues = "https://github.com/Rekin226/aquascope/issues"

[tool.setuptools.packages.find]
include = ["aquascope*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"aquascope/ai_engine/knowledge_base.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
